# tube-atlas-oss

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  USAGE.md  app.py  home.py  pyproject.toml  requirements.txt  ruff.toml  tube_atlas_cli.py
.streamlit/: config.toml
app_pages/: 1_Niche_Pulse.py  2_Channel_Audit.py  3_Channel_Analyzer.py  4_Video_Analyzer.py  5_Competitor_Discovery.py  6_Title_Generator.py  7_Video_To_Text.py  8_My_Projects.py  9_Long_Form_Studio.py  channel_insights.py  research_hub.py  video_lab.py
core/: ai_detector.py  autocomplete.py  cache.py  comments.py  competitors.py  i18n.py  keywords.py  lang_detect.py  llm.py  longform.py  outliers.py  projects.py  remix.py  research.py  scoring.py  theme.py  transcript.py  transcript_ytdlp.py  trends.py  utils.py  youtube.py
pages/: 01_Niche_Finder.py  01_Research.py  02_Keyword_Finder.py  02_Video_Cloner.py  03_Outlier_Finder.py  03_Video_Cloner.py  04_Outlier_Finder.py  04_Script_Writer.py  05_Producer.py  05_Studio.py  05_Title_Studio.py  10_Shorts_Analyzer.py  11_Channel_Audit.py  12_Niche_Pulse.py  1_Keyword_Generator.py  1_Niche_Pulse.py  2_Channel_Audit.py  2_Trends_Generator.py  3_Channel_Analyzer.py  3_Video_Analyzer.py  4_Channel_Analyzer.py  4_Video_Analyzer.py  5_Competitor_Discovery.py  5_Title_Generator.py  6_Title_Generator.py  6_Video_To_Text.py  7_Content_Spinner.py  7_Video_To_Text.py  8_Browser_Extractor.py  8_My_Projects.py  9_Comment_Analyzer.py  9_Long_Form_Studio.py
tests/: test_i18n.py  test_keyword_score.py  test_keywords.py  test_lang_detect.py  (+22 more)
(+21 files in other folders)
